# aztec-connect

./: .gitignore  flake.nix
.github/workflows/: cross-linux.yml  cross-mac.yml  rust.yml
.github/workflows/workflows/: cross-linux.yml
barretenberg/: CMakeLists.txt  barretenberg.nix  bootstrap.sh  wasilibc.nix  wasm.nix
barretenberg.js/: .gitignore  .swcrc  package.json
barretenberg.js/exports/: index.mjs
barretenberg.js/src/: index.ts
barretenberg.js/src/client_proofs/generic_proof/: index.ts  standard_example_verifier.ts
barretenberg.js/src/wasm/: barretenberg_wasm.ts  index.ts
barretenberg/cmake/: arch.cmake  module.cmake  threading.cmake  toolchain.cmake
barretenberg/cmake/toolchains/: aarch64-darwin.cmake  aarch64-linux-clang.cmake  aarch64-linux.cmake  wasm-linux-clang.cmake  wasm32-wasi.cmake  x86_64-darwin.cmake  x86_64-linux.cmake
barretenberg/noir-cli/: .eslintrc.js  package.json  tsconfig.json
barretenberg/src/aztec/: CMakeLists.txt
barretenberg/src/aztec/bb/: CMakeLists.txt  bb.cpp  bb.hpp
barretenberg/src/aztec/crypto/blake2s/: blake2s.hpp  c_bind.cpp
barretenberg/src/aztec/crypto/ecdsa/: ecdsa.hpp
barretenberg/src/aztec/stdlib/merkle_tree/: CMakeLists.txt
barretenberg_wrapper/: Cargo.toml  build.rs  flake.nix
barretenberg_wrapper/.cargo/: config.toml
barretenberg_wrapper/src/: blake2s.rs  composer.rs  pedersen.rs
noir-cli/: README.md
noir-cli/src/: index.ts
ts-standard-example/: bootstrap.sh  package.json  tsconfig.json
ts-standard-example/noir-example-project/src/: main.nr
ts-standard-example/src/: index.ts
(+28 files in other folders)
